# MERIDIAN

./: .env.example  .gitignore  .prettierignore  Cargo.toml  DESIGN.md  FINAL_IMPLEMENTATION_REPORT.md  FRONTEND_EXECUTION_MASTER_PROMPT.md  MERIDIAN_PRODUCT_STORY.md  README.md  eslint.config.js  justfile  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  render.yaml  tsconfig.base.json  vercel.json
agents/: run-all.mjs
backend/: package.json  tsconfig.json  vitest.config.ts
contracts/: Cargo.toml  Odra.toml
contracts/meridian-contracts/: Cargo.toml
contracts/meridian-contracts/src/: compliance_registry.rs  lib.rs  meridian_audit.rs  meridian_token.rs  staking_vault.rs  test_helpers.rs  timelock.rs  yield_distributor.rs
deployed/: addresses.json  casper-test-contracts.toml
docs/: AGENT_EXPERIENCE_SPEC.md  AGENT_IDENTITY.md  AI_CAPABILITIES.md  ARCHITECTURE.md  BENCHMARKS.md  BLOCKCHAIN_EXECUTION_REPORT.md  BUG_FIX_REPORT.md  CASPER_DEVELOPER_BIBLE.md  CASPER_EXECUTION_MASTER_GUIDE.md  CASPER_PROTOCOL_BIBLE.md  CLAUDE_SETUP.md  CURSOR_SETUP.md  DEPLOYMENT_RENDER.md  DOCUMENTATION_RESOLUTIONS.md  ENVIRONMENT_REQUIREMENTS.md  EXECUTION_AUDIT.md  EXPLORER_REPORT.md  FAQ.md  FINAL_E2E_REPORT.md  FINAL_PROMPT.md  FINAL_QA_REPORT.md  FRONTEND_INTEGRATION_STEP_BY_STEP.md  GAS_ANALYSIS.md  JUDGE_DEMO.md  LESSONS_LEARNED.md  MCP_INTEGRATION_GUIDE.md  MCP_REPORT.md  MERIDIAN_ENGINEERING_BIBLE.md  MERIDIAN_REDESIGN_AUDIT.md  OFFICIAL_REFERENCE_INDEX.md  ONBOARDING_FLOW.md  PRODUCT_AUDIT.md  PROJECT_EXECUTION_PLAN.md  PROMPT_LIBRARY.md  QUICK_START.md  SECURITY_FINDINGS.md  SMART_CONTRACT_REPORT.md  USER_ACTIONS.md  UX_REDESIGN_PLAN.md  WALLET_REPORT.md  (+5 more)
examples/: delegate-500-cspr.sh
frontend/: .env.example  index.html  next.config.mjs  package.json  playwright.config.ts  tailwind.config.js  vercel.json  (+3 more)
tests/integration/: Cargo.toml  rust-toolchain.toml  wasm
tests/integration/src/: lib.rs
tests/integration/tests/: access_control.rs  adversarial.rs  benchmarks.rs  deploy.rs  full_lifecycle.rs  gas_analysis.rs  restake.rs  revoke.rs
(+472 files in other folders)
