[package]
edition = "2021"
name = "meridian-contracts"
version = "0.1.0"

[dependencies]
meridian-types = { path = "../meridian-types" }
odra = { version = "2.8.2", default-features = false, features = [] }
odra-modules = { version = "2.8.2", default-features = false, features = [] }
odra-casper-livenet-env = { version = "2.8.2", optional = true }

[dev-dependencies]
odra-test = { version = "2.8.2", default-features = false, features = [] }
odra-casper-livenet-env = { version = "2.8.2" }

[features]
default = []
livenet = ["odra-casper-livenet-env"]

[build-dependencies]
odra-build = { version = "2.8.2", default-features = false, features = [] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
odra-build = { version = "2.8.2", default-features = false, features = [] }
odra-cli = { version = "2.8.2", default-features = false, features = [] }

[[bin]]
name = "meridian_contracts_build_contract"
path = "bin/build_contract.rs"
test = false

[[bin]]
name = "meridian_contracts_build_schema"
path = "bin/build_schema.rs"
test = false

[[bin]]
name = "meridian_contracts_cli"
path = "bin/cli.rs"
test = false

[[bin]]
name = "meridian_livenet_smoke"
path = "bin/livenet_smoke.rs"
required-features = ["livenet"]
test = false

[[bin]]
name = "meridian_gas_report"
path = "bin/gas_report.rs"
required-features = ["livenet"]
test = false
